--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.mat-spinner {
+    width: 50px !important;
+    height: 50px !important;
+    margin: 50px auto;
+    svg {
+        width: 50px !important;
+        height: 50px !important;
+    }
+}
