Edit app router

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary">
   <span class="logo">Store App</span>
-  <a mat-button [routerLink]="['/product-list']">Products</a>
+  <a mat-button [routerLink]="['/products']">Products</a>
   <a mat-button [routerLink]="['/add-product']">Add product</a>
 </mat-toolbar>
 
